dsp-cli/tests/snapshots/resource_describe_snapshots__resource_describe_json_project_members.snap
---
source: tests/resource_describe_snapshots.rs
expression: out
---
{"_meta":{"server":"api.dasch.swiss","auth":"anonymous","exit_code":0,"note":"results may be filtered; login to see private resources"},"data":{"label":"Private Folio","iri":"http://rdfh.ch/0803/private-res","resource_type":"Page","ark_url":"https://ark.stage.dasch.swiss/ark:/72163/1/0803/private","creation_date":"2022-01-10T12:00:00Z","last_modified":null,"attached_project":"http://rdfh.ch/projects/0803","owner":"http://rdfh.ch/users/project-admin","visibility":"project members only","your_access":"manage"}}
