dsp-cli/tests/snapshots/resource_describe_snapshots__resource_describe_lines_stdout.snap
---
source: tests/resource_describe_snapshots.rs
expression: stdout
---
n6r	http://rdfh.ch/0803/--6Esp4SVnGG1DBzFvYErw
